<resources>
    <string name="app_name">TSM Parts</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_launchhide">Drawer hide</string>
    <string name="saveprop">Save</string>
    <string name="colorpicker_summary">Current color</string>
    <string name="seekbar_summary" />
    <string name="picker_summary">Not set</string>
    <string name="devoption_title">Developer options</string>
    <string name="devoption_summary">Click here for standard developer options</string>
    <string name="gencat_0_title">Animation scales</string>
    <string name="winaniscale_title">Set window animation scale</string>
    <string name="winaniscale_summary">This gets deleted</string>
    <string name="winaniscale_dialogtitle">Pick a scale</string>
    <string name="winaniscale_units">x</string>
    <string name="trananiscale_title">Set transition animation scale</string>
    <string name="trananiscale_summary">This gets deleted</string>
    <string name="trananiscale_dialogtitle">Pick a scale</string>
    <string name="trananiscale_units">x</string>
    <string name="anidurscale_title">Set animator duration scale</string>
    <string name="anidurscale_summary">This gets deleted</string>
    <string name="anidurscale_dialogtitle">Pick a scale</string>
    <string name="anidurscale_units">x</string>
    <string name="gencat_1_title">General</string>
    <string name="drmblock_title">Disable FLAG_SECURE</string>
    <string name="drmblock_on">Allow screenshots on secure surface views</string>
    <string name="drmblock_off">Standard FLAG_SECURE behavior enforced</string>
    <string name="nfc_title">NFC mod type</string>
    <string name="nfc_diagtitle">NFC works when&#8230;</string>
    <string name="aircom_title">Set aircommand text color</string>
    <string name="aircom_dialog_title">Aircommand text color</string>
    <string name="floatbrows_title">Custom popup popout app</string>
    <string name="gencat_2_title">Display</string>
    <string name="headsup_title">Enable heads up notifications</string>
    <string name="headsup_on">Heads up notifications enabled</string>
    <string name="headsup_off">Heads up notifications disabled</string>
    <string name="headsup_timeout_title">Heads up notification timeout</string>
    <string name="headsup_timeout_dialogtitle">Pick a duration</string>
    <string name="headsup_timeout_units">seconds</string>
    <string name="touchkeylights_title">Disable screen touch key lights</string>
    <string name="touchkeylights_on">Screen touches do not light capacitive keys</string>
    <string name="touchkeylights_off">Screen touches light capacitive keys</string>
    <string name="plugwake_title">Disable wake on un/plug</string>
    <string name="plugwake_on">Un/plug will not wake the phone</string>
    <string name="plugwake_off">Un/plug will wake the phone</string>
    <string name="plugsound_title">Enable sound on plug</string>
    <string name="plugsound_on">Plug in will follow sound settings</string>
    <string name="plugsound_off">Plug in only vibrates</string>
    <string name="lowpowerdim_title">Disable low power dimming</string>
    <string name="lowpowerdim_on">Screen will not dim with low battery</string>
    <string name="lowpowerdim_off">Screen dims with low battery</string>
    <string name="pagebuddy_title">Hide PageBuddy notifications</string>
    <string name="pagebuddy_on">Hide all PageBuddy related notifications</string>
    <string name="pagebuddy_off">Show PageBuddy related notifications</string>
    <string name="gencat_3_title">Sound</string>
    <string name="lowbatt_title">Disable low battery alert</string>
    <string name="lowbatt_on">Low battery notification disabled</string>
    <string name="lowbatt_off">Low battery notification enabled</string>
    <string name="fullbatt_title">Disable full battery alert</string>
    <string name="fullbatt_on">Full battery notification disabled</string>
    <string name="fullbatt_off">Full battery notification enabled</string>
    <string name="volpanel_title">Volume panel expanded as default</string>
    <string name="volpanel_on">Expanded volume panel will show as default</string>
    <string name="volpanel_off">Stock volume panel will show as default</string>
    <string name="earprotect_title">Enable ear protect</string>
    <string name="earprotect_on">Headphone volume ear protect on</string>
    <string name="earprotect_off">Headphone volume ear protect off</string>
    <string name="datatog_title">Show data toggle</string>
    <string name="airplanetog_title">Show airplane toggle</string>
    <string name="screenshottog_title">Show screenshot toggle</string>
    <string name="volumetog_title">Show volume toggles</string>
    <string name="screenrectog_title">Show screenrecord toggle</string>
    <string name="screenrec_vidsize_title">Screen recorder video size</string>
    <string name="screenrec_vidsize_dialog_title">Pick a size</string>
    <string name="screenrec_bitrate_title">Screen recorder video bitrate</string>
    <string name="screenrec_bitrate_dialog_title">Pick a bitrate</string>
    <string name="screenrec_audio_title">Record audio</string>
    <string name="locksettings_title">Lockscreen options</string>
    <string name="locksettings_summary">Click here for stock lockscreen options</string>
    <string name="locktime_title">Use custom timeout</string>
    <string name="locktime_summary_on">Use custom values</string>
    <string name="locktime_summary_off">Use stock values</string>
    <string name="locktime_set_title">Set lockscreen timeout</string>
    <string name="locktime_units">seconds</string>
    <string name="lockcat_0_title">Lockscreen Options</string>
    <string name="sviewback_title">Alter SView background</string>
    <string name="sviewback_summary_on">Use separate uncolorable image</string>
    <string name="sviewback_summary_off">Use stock options</string>
    <string name="sviewforce_title">Force SView verification</string>
    <string name="sviewforce_summary_on">Force system to allow any cover as SView</string>
    <string name="sviewforce_summary_off">Use stock SView definition</string>
    <string name="lockdisable_title">Disable lockscreens</string>
    <string name="lockdisable_summary">Operates separate from stock disable</string>
    <string name="lockrotate_title">Allow lockscreen rotation</string>
    <string name="lockrotate_summary_on">Lockscreen rotation allowed</string>
    <string name="lockrotate_summary_off">No lockscreen rotation</string>
    <string name="aosphapdisable_title">Disable AOSP haptic</string>
    <string name="aosphapdisable_summary_on">Haptic feedback disabled</string>
    <string name="aosphapdisable_summary_off">Haptic feedback enabled</string>
    <string name="quickpin_title">Allow quick pin/pass unlock</string>
    <string name="quickpin_summary_on">Correct entry does not require OK to unlock</string>
    <string name="quickpin_summary_off">Must press OK to complete unlocking</string>
    <string name="seccamwidg_title">Allow secure camera widget</string>
    <string name="seccamwidg_summary_on">Allows camera widget on secure lockscreens</string>
    <string name="seccamwidg_summary_off">No camera widget on secure lockscreens</string>
    <string name="lockcat_1_title">Custom carrier options</string>
    <string name="carriertxt_title">Use custom carrier</string>
    <string name="carriertxt_summary_on">Use custom carrier text</string>
    <string name="carriertxt_summary_off">Use system provided carrier text</string>
    <string name="carriertxt_set_title">Set carrier text</string>
    <string name="carriertxt_color_title">Set custom text color</string>
    <string name="carriertxt_dialog_title">Carrier text color</string>
    <string name="lockcat_2_title">Hard button options</string>
    <string name="pmenudis_title">Powermenu disable</string>
    <string name="pmenudis_summary_on">Power menu will not show on lockscreen</string>
    <string name="pmenudis_summary_off">Stock power menu behavior</string>
    <string name="homewakedis_title">Disable home button wake</string>
    <string name="homewakedis_summary_on">Home button wake disabled</string>
    <string name="homewakedis_summary_off">Home button wake enabled</string>
    <string name="locktorch_title">Enable lockscreen flashlight</string>
    <string name="locktorch_summary_on">Longpress Home on lockscreen to turn on flashlight</string>
    <string name="locktorch_summary_off">Longpress home on lockscreen does nothing</string>
    <string name="volwake_title">Enable volume wake</string>
    <string name="volwake_summary">Requires kernel support or device plugged in</string>
    <string name="lockcat_3_title">Finger ink options</string>
    <string name="fingink_title">Enable finger ink</string>
    <string name="fingink_summary_on">Finger and spen ink ripple unlock effect</string>
    <string name="fingink_summary_off">Standard only-spen ink ripple unlock effect</string>
    <string name="customink_title">Use custom ink color</string>
    <string name="customink_summary_on">Use custom color for ink effect</string>
    <string name="customink_summary_off">Use stock ink effect colors</string>
    <string name="customink_set_title">Set ink color</string>
    <string name="customink_dialog_title">Finger ink color</string>
    <string name="misccat_0_title">Settings options</string>
    <string name="s5settings_title">S5 Settings layout</string>
    <string name="s5settings_summary_on">Switch to S5 grid layout Settings</string>
    <string name="s5settings_summary_off">Standard N3 SecSettings UI layout</string>
    <string name="misccat_1_title">Email/Exchange settings</string>
    <string name="xchange_title">Bypass exchange security setup</string>
    <string name="xchange_summary_on">Bypassing security policy at setup</string>
    <string name="xchange_summary_off">Standard security policies used at setup</string>
    <string name="misccat_2_title">Contacts and phone settings</string>
    <string name="steadring_title">Disable ascending ringer</string>
    <string name="steadring_summary_on">Ascending ring disabled</string>
    <string name="steadring_summary_off">Ascending ring enabled</string>
    <string name="callend_title">Skip call ended screen</string>
    <string name="callend_summary_on">No call ended screen</string>
    <string name="callend_summary_off">Stock end call screen</string>
    <string name="callrec_title">Show record button</string>
    <string name="callrec_summary_on">Record button shows in calls</string>
    <string name="callrec_summary_off">Add Call shows in calls</string>
    <string name="callcont_title">Show call icon in log</string>
    <string name="callcont_summary_on">Shows call icon in call log</string>
    <string name="callcont_summary_off">Does not show call icon in call log</string>
    <string name="misccat_3_title">Launcher settings</string>
    <string name="wallscroll_title">Enable scrollable wallpaper</string>
    <string name="wallscroll_summary_on">Wallpapers will scroll</string>
    <string name="wallscroll_summary_off">Wallpapers will not scroll</string>
    <string name="infscroll_title">Enable infinite scroll</string>
    <string name="infscroll_summary_on">Launcher pages infinitely loop</string>
    <string name="infscroll_summary_off">Launcher pages do not loop</string>
    <string name="showhideapp_title">Enable hide apps option</string>
    <string name="showhideapp_summary_on">Option to hide apps from app drawer</string>
    <string name="showhideapp_summary_off">Stock option to uninstall/disable apps</string>
    <string name="custhomeup_title">Alter home upswipe target</string>
    <string name="custhomeup_summary_on">Opens custom app</string>
    <string name="custhomeup_summary_off">Opens Magazine</string>
    <string name="custhomeupset_title">Custom home upswipe target</string>
</resources>