<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference android:title="@string/datatog_title" android:key="power_menu_data" />
    <CheckBoxPreference android:title="@string/airplanetog_title" android:key="power_menu_airplane" />
    <CheckBoxPreference android:title="@string/screenshottog_title" android:key="power_menu_screenshot" />
    <CheckBoxPreference android:title="@string/volumetog_title" android:key="power_menu_volume" />
    <CheckBoxPreference android:title="@string/screenrectog_title" android:key="power_menu_screenrecord" />
    <ListPreference android:entries="@array/screen_recorder_video_sizes" android:title="@string/screenrec_vidsize_title" android:dialogTitle="@string/screenrec_vidsize_dialog_title" android:key="screen_recorder_output_dimensions" android:entryValues="@array/screen_recorder_video_values" android:dependency="power_menu_screenrecord" />
    <ListPreference android:entries="@array/screen_recorder_bitrate_entries" android:title="@string/screenrec_bitrate_title" android:dialogTitle="@string/screenrec_bitrate_dialog_title" android:key="screen_recorder_bitrate" android:entryValues="@array/screen_recorder_bitrate_values" android:dependency="power_menu_screenrecord" />
    <CheckBoxPreference android:title="@string/screenrec_audio_title" android:key="screen_recorder_record_audio" android:dependency="power_menu_screenrecord" />
</PreferenceScreen>